syntax = "proto3";

package api.authorization.v1;

import "google/protobuf/empty.proto";

option go_package = "austin-v2/api/authorization/v1;v1";
option java_multiple_files = true;
option java_package = "api.authorization.v1";

service Authorization {
	// 检查权限
	rpc CheckAuthorization (CheckAuthorizationRequest) returns (CheckReply){};

	// 角色列表
	rpc GetRoleList (google.protobuf.Empty) returns (GetRoleListReply){};

	// 角色创建
	rpc CreateRole (CreateRoleRequest) returns (RoleInfo){};

	// 角色更新
	rpc UpdateRole (UpdateRoleRequest) returns (RoleInfo){};

	// 角色删除
	rpc DeleteRole (DeleteRoleRequest) returns (CheckReply){};
	// 设置用户角色关系
	rpc SetRolesForUser (SetRolesForUserRequest) returns (CheckReply){};
	// 添加用户角色关系
	rpc AddRolesForUser (AddRolesForUserRequest) returns (CheckReply){};
	// 获取用户角色列表
	rpc GetRolesForUser (GetRolesForUserRequest) returns (GetRolesForUserReply){};
	// 获取角色用户列表
	rpc GetUsersForRole (GetUsersForRoleRequest) returns (GetUsersForRoleReply){};
	// 删除用户某个角色
	rpc DeleteRoleForUser (DeleteRoleForUserRequest) returns (CheckReply){};
	// 删除用户所有角色
	rpc DeleteRolesForUser (DeleteRolesForUserRequest) returns (CheckReply){};

	// 策略授权规则列表
	rpc GetPolicies (GetPoliciesRequest) returns (GetPoliciesReply){};
	// 策略添加授权规则
	rpc UpdatePolicies (UpdatePoliciesRequest) returns (CheckReply){};
	// 所有Api列表
	rpc GetApiAll (google.protobuf.Empty) returns (GetApiAllReply){};
	// Api列表
	rpc GetApiList (GetApiListRequest) returns (GetApiListReply){};

	// Api创建
	rpc CreateApi (CreateApiRequest) returns (ApiInfo){};

	// Api更新
	rpc UpdateApi (UpdateApiRequest) returns (ApiInfo){};

	// Api删除
	rpc DeleteApi (DeleteApiRequest) returns (CheckReply){};

	// 所有Menu列表
	rpc GetMenuAll (google.protobuf.Empty) returns (GetMenuTreeReply){};
	// Menu列表
	rpc GetMenuTree (google.protobuf.Empty) returns (GetMenuTreeReply){};

	// Menu创建
	rpc CreateMenu (CreateMenuRequest) returns (MenuInfo){};

	// Menu更新
	rpc UpdateMenu (UpdateMenuRequest) returns (MenuInfo){};

	// Menu删除
	rpc DeleteMenu (DeleteMenuRequest) returns (CheckReply){};

	// 角色菜单列表树
	rpc GetRoleMenuTree (GetRoleMenuRequest) returns (GetMenuTreeReply){};

	// 角色菜单列表
	rpc GetRoleMenu (GetRoleMenuRequest) returns (GetMenuTreeReply){};

	// 角色菜单更新
	rpc SetRoleMenu (SetRoleMenuRequest) returns (CheckReply){};

	// 获取角色菜单按钮列表
	rpc GetRoleMenuBtn (GetRoleMenuBtnRequest) returns (GetRoleMenuBtnReply){};
	// 保存角色菜单按钮列表
	rpc SetRoleMenuBtn (SetRoleMenuBtnRequest) returns (CheckReply){};

}

message GetRoleListReply {
	repeated RoleInfo list = 1;
}

message CheckAuthorizationRequest {
	string sub = 1;
	string obj = 2;
	string act = 3;
}

message CheckReply {
	bool is_success = 1;
}

message RoleInfo {
	int64 id = 1;
	int64 parent_id = 2;
	string name = 3;
	string created_at = 4;
	string updated_at = 5;
	repeated int64 parent_ids = 6;
	repeated RoleInfo children = 7;
}

message CreateRoleRequest{
	int64 parent_id = 1;
	string name = 2;
	repeated int64 parent_ids = 3;
}

message DeleteRoleRequest{
	int64 id = 1;
}

message UpdateRoleRequest {
	int64 id = 1;
	int64 parent_id = 2;
	string name = 3;
	repeated int64 parent_ids = 4;
}

message SetRolesForUserRequest {
	string username = 1;
	repeated string roles = 2;
}

message AddRolesForUserRequest {
	string username = 1;
	repeated string roles = 2;
}

message GetRolesForUserRequest {
	string username = 1;
}

message GetRolesForUserReply {
	repeated string roles = 1;
}

message GetUsersForRoleRequest {
	string role = 1;
}

message GetUsersForRoleReply {
	repeated string users = 1;
}

message DeleteRoleForUserRequest{
	string username = 1;
	string role = 2;
}

message DeleteRolesForUserRequest{
	string username = 1;
}

message PolicyRules {
	string path = 1;
	string method = 2;
}

message UpdatePoliciesRequest {
	string role = 1;
	repeated PolicyRules policyRules = 2;
}

message ApiInfo {
	int64 id = 1;
	string group = 2;
	string name = 3;
	string path = 4;
	string method = 5;
	string created_at = 6;
	string updated_at = 7;
}

message GetApiListRequest{
	int64 page = 1;
	int64 page_size = 2;
	string group = 3;
	string name = 4;
	string path = 5;
	string method = 6;
}

message GetApiAllReply {
	repeated ApiInfo list = 1;
}

message GetApiListReply {
	int64 total = 1;
	repeated ApiInfo list = 2;
}

message CreateApiRequest {
	string group = 1;
	string name = 2;
	string path = 3;
	string method = 4;
}

message UpdateApiRequest {
	int64 id = 1;
	string group = 2;
	string name = 3;
	string path = 4;
	string method = 5;
}

message DeleteApiRequest {
	int64 id = 1;
}

message GetMenuTreeReply {
	repeated MenuInfo list = 1;
}

message MenuInfo {
	int64 id = 1;
	int64 parent_id = 2;
	string path = 3;
	string name = 4;
	int64 hidden = 5;
	string component = 6;
	int64 sort = 7;
	string title = 8;
	string icon = 9;
	string created_at = 10;
	string updated_at = 11;
	repeated MenuInfo children = 12;
	repeated MenuBtn menuBtns = 13;
	repeated int64 parent_ids = 14;
}
message MenuBtn {
	int64 id = 1;
	int64 menu_id = 2;
	string name = 3;
	string description = 4;
	string identifier = 5;
	string created_at = 6;
	string updated_at = 7;
}

message CreateMenuRequest {
	int64 parent_id = 2;
	string path = 3;
	string name = 4;
	int64 hidden = 5;
	string component = 6;
	int64 sort = 7;
	string title = 8;
	string icon = 9;
	repeated MenuBtn menuBtns = 10;
	repeated int64 parent_ids = 11;
}

message UpdateMenuRequest {
	int64 id = 1;
	int64 parent_id = 2;
	string path = 3;
	string name = 4;
	int64 hidden = 5;
	string component = 6;
	int64 sort = 7;
	string title = 8;
	string icon = 9;
	repeated MenuBtn menuBtns = 10;
	repeated int64 parent_ids = 11;
}

message DeleteMenuRequest {
	int64 id = 1;
}

message SetRoleMenuRequest{
	int64 role_id = 1;
	repeated int64 menu_ids = 2;
}

message GetRoleMenuRequest{
	string role = 1;
}

message GetPoliciesRequest{
	string Role = 1;
}

message GetPoliciesReply{
	repeated PolicyRules policyRules = 1;
}

message GetRoleMenuBtnRequest {
	int64 role_id = 1;
	string role_name = 2;
	int64 menu_id = 3;
}

message GetRoleMenuBtnReply {
	repeated MenuBtn list = 1;
}

message SetRoleMenuBtnRequest {
	int64 role_id = 1;
	int64 menu_id = 2;
	repeated int64 menu_btn_ids = 3;
}
